# FedRecPolicyEval

./: .gitignore  LICENSE.md  README.md  pyproject.toml  run_experiments.sh  setup.py
src/: __init__.py  client_app.py  plot_results.py  server_app.py  task.py
src/FedRecPolicyEval/: __init__.py
src/FedRecPolicyEval/client/: client.py
src/FedRecPolicyEval/models/: __init__.py  vae.py
src/FedRecPolicyEval/server/: __init__.py  server.py  strategy.py
src/FedRecPolicyEval/utils/: __init__.py  metrics.py
src/client/: __init__.py  client.py
src/data/: __init__ .py  __init__.py  data_loader.py  dataset.py
src/models/: matrix_factorization.py  vae.py
src/server/: server.py  strategy.py
src/utils/: __init__.py  metrics.py  model_utils.py  preference_evolution.py  visualization.py
src/visuals/: visualisation.py  visuals.py
tests/: test_client.py  test_data_loader.py  test_metrics.py  test_models.py
