[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedRecPolicyEval"
version = "1.0.0"
description = "A Flower / PyTorch package for evaluating recommender system policies."
readme = "README.md"
license = "BSD Zero Clause License"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "mlacay@berkeley.edu"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
local-epochs = 50
learning-rate = 0.001
top-k = 20
num-items = 3706 # old value for ml-latest-small: 9724

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20
