[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedRecPolicyEval"
version = "1.0.0"
description = "A Flower / PyTorch package for evaluating recommender system policies."
readme = "README.md"
license = "0BSD"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "mlacay@berkeley.edu"

[tool.flwr.app.components]
serverapp = "src.server.server:create_server_app"
clientapp = "src.client.client:create_client_app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 50
learning-rate = 0.001
top-k = 20
num-items = 3706 # old value for ml-latest-small: 9724
model-type = "mf"
num-users = 2 # for mf; must be same as num-supernodes

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
