[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedRecPolicyEval"
version = "1.0.0"
description = "A Flower / PyTorch package for evaluating recommender system policies."
readme = "README.md"
license = "0BSD"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build]
packages = ["src"]

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"

[tool.flwr.app.config]
model-type = "vae"
num-server-rounds = 3
local-epochs = 5
top-k = 10
learning-rate = 0.0001
temperature = 0.5
negative-penalty = 0.2
popularity-penalty = 0.1
beta = 0.01
gamma = 0.01
learning-rate-schedule = "constant"
preference-init-scale = 0.3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.app]
publisher = "mlacay@berkeley.edu"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*"
]